 - Added some more colours
 - Added page count when "maxPages" is larger than 1
 - Fixed episode naming for plex sorting with dashes
 - Changed default floatplaneServer to use Edge02-na.floatplaneclub.com vs Edge01-na.floatplaneclub.com (Seems to perform better)
 - Added "floatplaneServer" setting
 - Added "formatWithDate" setting
 - Fixed a issue with creating missing directories
 - Added ability to sort episodes by Year or Month in plex as a fake season. Read updated plex guide for info
 - Added "yearsAsSeasons" setting
 - Added "monthsAsSeasons" setting
 - Added ability to have the script auto repeat every x seconds, minutes, hours, days or weeks
 - Added "repeatScript" setting
 - Fixed bug with reusing session data introduced in v3.1.0, Should remove the need to use forceLogin now
 - Updated Update.js for new settings
 - Added "plexSection" setting
 - Added "plexScannerInstall" setting
 - Integrated plex library updates into the script, see settings wiki for more info
 - Commented all new code


v3.6.2
 - Added coloured console printouts
 - Fixed ffmpeg failing
 - Fixed depricatedCallback error
 - Fixed BitWit Ultra redownloading videos with a specific set of characters
 - Fixed episodes names not being printed under the proper main channel

v3.6.1
 - Added maxParallelDownloads allowing you to limit the number of simultaneous downloads
 - Added downloadArtwork allowing you to disable downloading video pictures
 - Folders are now created if they dont exist
 - Added subChannelIgnore to ignore specific subchannels eg Techquickie
 - A bunch of fixes and tweaks to code
 - Fully commented new code

v3.6.0
 - Added resuming partial downloads
 - Renamed scrape.js to float.js

v3.5.1
 - Fix for maxVideos<30 downloading inverse.
 - Added ignoreFolderStructure allowing you to download all videos into one folder
 - Added downloadUpdateTime allowing you to change the frequency the download bars update