@@ -7,6 +7,7 @@ v3.7.0
  - Fixed episode naming for plex sorting with dashes
  - Changed default floatplaneServer to use Edge02-na.floatplaneclub.com vs Edge01-na.floatplaneclub.com (Seems to perform better)
  - Added "floatplaneServer" setting
+ - Added "niceErrors" setting
  - Added "formatWithDate" setting
  - Fixed a issue with creating missing directories
  - Added ability to sort episodes by Year or Month in plex as a fake season. Read updated plex guide for info
@@ -20,7 +21,8 @@ v3.7.0
  - Added "plexScannerInstall" setting
  - Integrated plex library updates into the script, see settings wiki for more info
  - Commented all new code
-
+ - Fixed BitWit title naming having incorrect dashes
+ - Added Redundancy to Update.bat and Install.bat
 
 v3.6.2
  - Added coloured console printouts
